修改第二章中错误。

--- a/第二章/main.tex
+++ b/第二章/main.tex
@@ -870,13 +870,7 @@ $\therefore$ 由$A=LU$即可确定：
 \end{theorem}
 
 \subsection{Chelesky分解（平方根）法}
-对称正定：
-\begin{itemize}
-\item $A^T = A$
-\item 正定
-\item $\lambda_i > 0$
-\item $D_i > 0$
-\end{itemize}
+\textbf{对称}：$A^T = A$；\textbf{正定}：$\lambda_i > 0$，$D_i > 0$
 
 假设$det(A)\neq 0$，且$D_i\neq 0, i=1,2,\dots, n-1$
 则$A=LU$进一步：
