修改一处计算错误

--- a/第五章/main.tex
+++ b/第五章/main.tex
@@ -166,8 +166,8 @@ $\therefore$梯形公式的局部截断误差为$-\frac{h^3}{12}y^{{'}{'}{'}}(x_
     \end{equation*}
     \begin{equation*}
         \begin{split}
-            &\overline{y} = y(x_n) + \frac{h^2}{2}(f_x+ff_y) \\
-            &\quad \frac{h^3}{4}(f_{xx} + f_{xy}f + ff_{yx}+f^2f_{yy}+f_yf_x+f^2_yf) + O(h^4)
+            &\overline{y} = y(x_n) + \frac{h}{2}f + \frac{h}{2}(f+ h(f_x+ff_y) \\
+            &\quad \frac{h^2}{2}(f_{xx} + f_{xy}f + ff_{yx}+f^2f_{yy}+f_yf_x+f^2_yf) + O(h^3))
         \end{split}
     \end{equation*}
     \begin{align*}
