--- a/第二章/main.tex
+++ b/第二章/main.tex
@@ -1494,7 +1494,7 @@ $$x^{(k+1)}=(D-wL)^{-1}[(1-w)D+wU]x^{(k)}+w(D-wL)^{-1}b $$
 的最小值点问题。
 
 \begin{theorem}
-  设A对称正定，则$x^*$为方程组额解的充要条件是$\phi(x^*)=min_{x\in R^n}\phi(x) $
+  设A对称正定，则$x^*$为方程组的解的充要条件是$\phi(x^*)=min_{x\in R^n}\phi(x) $
 \end{theorem}
 \begin{proof}
   定义如下函数：
